--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<p>asdasdadas</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>BattleBit Server List</h1>
+    
+    </p  >
+    <script>
+        function getServerList() {
+            fetch('https://publicapi.battlebit.cloud/Servers/GetServerList').then((Response) => Response.json()).then((data) => {
+                console.log(data);
+            }).catch((err) => {
+                console.log("Servers not found", err);
+            });
+        }
+
+        getServerList();
+    </script>
+</body>
+</html>
