--- a/index.html
+++ b/index.html
@@ -4,21 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
+    <script src="script.js"></script>
 </head>
+
 <body>
     <h1>BattleBit Server List</h1>
     
-    </p  >
-    <script>
-        function getServerList() {
-            fetch('https://publicapi.battlebit.cloud/Servers/GetServerList').then((Response) => Response.json()).then((data) => {
-                console.log(data);
-            }).catch((err) => {
-                console.log("Servers not found", err);
-            });
-        }
-
-        getServerList();
-    </script>
 </body>
 </html>
