finished columns and added a filter

--- a/index.html
+++ b/index.html
@@ -5,11 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
-    <script src="script.js"></script>
+    
 </head>
 
 <body>
     <h1>BattleBit Server List</h1>
+
+    <button id="btn">Button</button>
+    <input type="text" id="inputBox" name="name" placeholder="Filter"> </input>
+   
+    <table>
+
+            <tr>
+                <th id="title">
+                    Server
+                </th>
+
+                <th>
+                    Map Name
+                </th>
+
+                <th>
+                    Server
+                </th>
+            </tr>
+
+    </table>
+   
+
     
+<script src="script.js"></script>
 </body>
 </html>
